# automated-eda-with-llm

./: Makefile  README.md  pyproject.toml
src/: main.py
