[tool.poetry]
name = "automated-eda-with-llm"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
streamlit = "^1.37.1"
langchain-openai = "^0.1.22"
langchain-experimental = "^0.0.64"
langchain-community = "^0.2.12"
tabulate = "^0.9.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
